[WFLY-17144] Get HostExcludesTestCase passing